--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -158,7 +158,7 @@
                                   <label class="form-check-label" for="notificationCheck1"></label>
                                   <span class="form-check-stretched-bg"></span>
                                 </div>
-                                <img class="avatar avatar-sm avatar-circle" src="./assets/img/160x160/img3.jpg" alt="Image Description">
+                                <img class="avatar avatar-sm avatar-circle" src="https://ui-avatars.com/api/?name={{user.userName}}&background=0D8ABC&color=fff&size=128" alt="Image Description">
                               </div>
                             </div>
                             <!-- End Col -->
