--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,10 @@
 a:hover{
   cursor: pointer;
 }
+
+
+.btn-custom{
+  --bs-btn-padding-y: .25rem !important;
+  --bs-btn-padding-x: .5rem !important;
+  --bs-btn-font-size: .75rem !important;
+}
