--- a/src/app/pages/modules/materials/inputs-material/inputs-material.component.html
+++ b/src/app/pages/modules/materials/inputs-material/inputs-material.component.html
@@ -29,6 +29,7 @@
                         <th>Producto</th>
                         <th>Unidad</th>
                         <th>Cantidad</th>
+                        <th>Recibí</th>
                         <th>Costo</th>
                     </tr>
                 </thead>
@@ -36,17 +37,23 @@
                   <tr>
                         <td><input type="checkbox" class="form-check-input" name="" id=""></td>
                         <td></td>
-                        <td>Laptop HP Intel core i3</td>
-                        <td></td>
+                        <td>Producto de prueba A</td>
+                        <td>Pz</td>
                         <td>3</td>
+                        <td>
+                          <input type="number" class="form-control form-control-sm">
+                        </td>
                         <td></td>
-                    </tr>
-                    <tr>
+                      </tr>
+                      <tr>
                         <td><input type="checkbox" class="form-check-input" name="" id=""></td>
                         <td></td>
-                        <td>Laptop HP Intel core i7</td>
-                        <td></td>
+                        <td>Producto de prueba B</td>
+                        <td>Pz</td>
                         <td>2</td>
+                        <td>
+                          <input type="number" class="form-control form-control-sm">
+                        </td>
                         <td></td>
                     </tr>
                 </tbody>
