--- a/src/app/pages/modules/orders/opdf/opdf.component.html
+++ b/src/app/pages/modules/orders/opdf/opdf.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5 border p-4" id="printAreaOPDF">
     <div class="row">
         <div class="col text-end">
-            <h1 class="text-primary">PURCHASE ORDER</h1>
+            <h1 class="text-primary">Orden de compra</h1>
         </div>
     </div>
 
