--- a/src/app/utils/custom-dropdown/custom-dropdown.component.css
+++ b/src/app/utils/custom-dropdown/custom-dropdown.component.css
@@ -1,8 +1,3 @@
-.hidden{
-  display: none;
-}
-
-
 .dropdown-toggle {
   display: block;
   width: 100%;
@@ -16,10 +11,6 @@
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.dropdown-toggle:hover {
-  border: 1px solid #ced4da;
 }
 
 .dropdown-toggle:focus {
@@ -46,9 +37,15 @@
   background-color: #fff;
   border: none;
   width: 100%;
+  white-space: normal; /* Permitir que el texto haga "wrap" */
+  word-wrap: break-word; /* Opcional: romper palabras largas si es necesario */
 }
 
 .dropdown-item:hover {
   color: #fff;
   background-color: #0d6efd;
+}
+
+.dropdown-menu.show {
+  display: block;
 }
